Fixed div sizing error on mobile breakpoint

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -224,6 +224,10 @@ main > div:first-of-type > div {
   align-items: center;
 }
 
+main > div > div{
+  min-height: 100px;
+}
+
 main > div > div:last-of-type {
   border-bottom: none;
 }
@@ -360,7 +364,9 @@ nav ul li{
     padding-top: 2.5rem;
   }
 
-
+  main > div > div{
+    min-height: 0;
+  }
 
   main > div:first-of-type > h2{
     margin-left: auto;
